counterbackend/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: counter-backend
  labels:
    app.kubernetes.io/part-of: counter

spec:
  ports:
    - name: 8080-tcp
      port: 8080
      protocol: TCP
      targetPort: 8080
  selector:
    app: counter-backend  # Selector to identify pods with this label
  type: ClusterIP
  sessionAffinity: None
