counterbackend/route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: counter-backend
  Labels:
    app: counter-backend
    app.kubernetes.io/part-of: counter

spec:
  port:
    targetPort: 8080-tcp
  to:
    kind: Service
    name: counter-backend  # zu welchem service der route zeigen soll
  tls:
    termination: edge
    insecureEdgeTerminationPolicy: Redirect
